aggiunta top_bar in position fixed e contenitore playlists con overflow

--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,41 @@ body {
 
 /* corpo del progetto */
 main {
+  display: flex;
   height: calc(100% - 80px);
+  background-color: #141922;
+
 }
+
+/* top_bar fixed */
+.top_bar {
+  position: fixed;
+  z-index: 100;
+  left: 250px;
+  top: 0;
+  height: 80px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+/* /top_bar fixed */
+
 /* aside */
 .aside {
   height: 100%;
   width: 250px;
   background-color: black;
+  flex-shrink: 0;
 }
 /* /aside */
+
+/* playlists */
+.playlists {
+  width: calc(100% - 250px);
+  overflow: auto;
+  color: grey;
+}
+
+/* /playlists */
 
 
 /* /corpo del progetto */
